# Whereiscowie

./: .env.example  .replit  README.md  config.py  deploy_package.txt  install.sh  install_ubuntu.md  invite_link.md  main.py  manual_install.md  map_screenshot.py  pyproject.toml  replit.md  ship_tracker.py  test_coordinates.py  test_cruisemapper.py  test_scraping.py
